fix: spacing

--- a/src/assets/styles/pages/watching.css
+++ b/src/assets/styles/pages/watching.css
@@ -21,7 +21,6 @@
       z-index: 2;
       display: flex;
       flex-direction: column;
-      gap: var(--sizing-xs);
 
       & .header {
         font-weight: var(--font-weight-bold);
